SOme refactoring